Fixing an overflow issue with the header.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -238,6 +238,7 @@ header.bk-header {
 	vertical-align: middle;
 	
 	@media @tablet {
+	    display: block;
 		width: 100%;
 	}
 }
